demo-suggested/ec2_cloudform.yaml


AWSTemplateFormatVersion: 2010-09-09

## Prompts the user to choose the Environment Type

Parameters:
  EnvironmentType:
    Description: "Specify the Environment type of the stack."
    Type: String
    Default: staging
    AllowedValues:
      - staging
      - prod

Mappings:
  EnvironmentToInstanceType:
    staging:
      InstanceType: t3.nano
    prod:
      InstanceType: t3.micro

Resources:

#Creating the Key pair for Australia 

  ImpexKeyAus:
    Type: 'AWS::EC2::KeyPair'
    Properties: 
      KeyName: ImpexKeyPairAus

#Creating the VPC for Australia
  VPCIMPEXAUS:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.10.0.0/16
      EnableDnsSupport: yes
      EnableDnsHostnames: yes

#Creating Internet Gateway
  IGWIMPEXAUS:
    Type: 'AWS::EC2::InternetGateway'

#Attaching the ITG to the VPC
  InternetGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPCIMPEXAUS
      InternetGatewayId: !Ref IGWIMPEXAUS

#Creating Subnet for Australia 
  SubnetImpexAUS:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPCIMPEXAUS
      AvailabilityZone: ap-southeast-2a
      CidrBlock: 10.10.1.0/24


#Creating a Route Table
  RouteTableImpexAUS:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPCIMPEXAUS

#Configuring Route
  RouteImpexAUS:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTableImpexAUS
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGWIMPEXAUS

#Associating Subnet  and Route Table  
  SubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref RouteTableImpexAUS
      SubnetId: !Ref SubnetImpexAUS


#Creating Security Group
  SGIMPEXAUS:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: !Join ["-", [IMPEX-AUS, !Ref EnvironmentType]]
      GroupDescription: Enable SSH access and HTTP 
      VpcId: !Ref VPCIMPEXAUS
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

# Attach Existing IAM role for System Manager
  Ec2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles: [ !Ref Ec2InstanceRole ]
  Ec2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      ManagedPolicyArns:
        # ********** This is really the only adjustment we need to make to enable use of SSM Session Manager
        #            All the AWS::CloudFormation::Init and cloud init script work is setting up cloudwatch logs
        #            to give visibility to the SSM Agent actions.
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: [ ec2.amazonaws.com ]
            Action:
              - sts:AssumeRole
      Path: /
# Create Ec2 Instance
  EC2Instance:
      Type: AWS::EC2::Instance
      Properties:
        ImageId: ami-0310483fb2b488153
        InstanceType: !FindInMap [
          EnvironmentToInstanceType,
          !Ref EnvironmentType,
          InstanceType,
        ]
        Tags:
          - Key: Name
            Value: Impex-Aus
        KeyName: !Ref ImpexKeyAus
        IamInstanceProfile: !Ref Ec2InstanceProfile
        NetworkInterfaces:
          - AssociatePublicIpAddress: "true"
            DeviceIndex: "0"
            GroupSet:
              - Ref: SGIMPEXAUS
            SubnetId:
              Ref: SubnetImpexAUS
        

  
# Configuring Elastic IP
  EIPImpexAUS:
    Type: AWS::EC2::EIP
    Properties: 
      Domain: vpc

  ENIASSIMPEXAUS:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref EC2Instance
      EIP: !Ref EIPImpexAUS
